// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateDischargeSummaryHTML — HTML snapshot > snapshot: full discharge summary with medication orders and follow-up 1`] = `
"<!DOCTYPE html>
<html lang="en"><head><meta charset="UTF-8" /><meta name="viewport" content="width=device-width, initial-scale=1.0" />
<title>Discharge Summary - Priya Snapshot</title>
<style>
  * { margin: 0; padding: 0; box-sizing: border-box; }
  body { font-family: 'Segoe UI', Tahoma, Verdana, sans-serif; color: #1e293b; background: #fff; }
  .page { max-width: 820px; margin: 0 auto; padding: 36px; }
  table { width:100%; border-collapse: collapse; }
  th { background:#f8fafc; text-align:left; padding:8px 10px; font-size:11px; text-transform:uppercase; color:#64748b; border-bottom:2px solid #e2e8f0; }
  td { padding:7px 10px; border-bottom:1px solid #e5e7eb; font-size:13px; vertical-align:top; }
  h2.title { text-align:center; font-size:16px; text-transform:uppercase; letter-spacing:2px; color:#475569; margin-bottom:18px; }
  .section { margin-bottom:18px; }
  .section h3 { font-size:12px; color:#94a3b8; text-transform:uppercase; letter-spacing:1px; margin-bottom:6px; }
  .box { background:#f1f5f9; border-left:4px solid #2563eb; padding:10px 14px; border-radius:0 6px 6px 0; font-size:13px; }
  .signblock { display:flex; justify-content:flex-end; margin-top:36px; }
  .signblock .sig { text-align:center; }
  .signline { height:50px; width:200px; border-bottom:1px solid #333; margin-bottom:4px; }
  .footer { margin-top:30px; padding-top:10px; border-top:1px solid #e2e8f0; text-align:center; font-size:10px; color:#94a3b8; }
  @media print {
    .page { padding:18px; max-width:100%; }
    .no-print { display:none !important; }
  }
  </style>
</head><body><div class="page">
  
  <div style="text-align:center;border-bottom:3px double #2563eb;padding-bottom:14px;margin-bottom:18px;">
    <h1 style="font-size:24px;color:#2563eb;margin:0 0 4px;">MedCore Hospital</h1>
    <p style="font-size:12px;color:#64748b;margin:2px 0;">1 Main St, Bengaluru 560001</p>
    <p style="font-size:11px;color:#64748b;margin:2px 0;">
      Phone: +91 80 1234 5678
       &nbsp;|&nbsp; Email: info@medcore.hospital
    </p>
    <p style="font-size:11px;color:#94a3b8;margin:2px 0;">
      GSTIN: 07AAAAA0000A1Z5
       &nbsp;|&nbsp; Reg. No: REG-KA-2024-001
    </p>
  </div>
  <h2 class="title">Discharge Summary</h2>

  <div style="display:flex;gap:20px;margin-bottom:18px;">
    <div style="flex:1;font-size:13px;">
      <p><strong>Patient:</strong> Priya Snapshot</p>
      <p><strong>MR No.:</strong> MR-SNAP-001</p>
      <p><strong>Age / Gender:</strong> 35 / FEMALE</p>
      <p><strong>Address:</strong> 42 Fixture Lane, Bengaluru</p>
      <p><strong>Phone:</strong> +91 98 0000 0001</p>
    </div>
    <div style="flex:1;font-size:13px;">
      <p><strong>Admission #:</strong> ADM-SNAP-002</p>
      <p><strong>Admitted:</strong> —</p>
      <p><strong>Discharged:</strong> —</p>
      <p><strong>Ward / Bed:</strong> General Ward 4 / W4-B02</p>
      <p><strong>Attending Doctor:</strong> Dr. Sunita Rao</p>
    </div>
  </div>

  <div class="section"><h3>Final Diagnosis</h3>
    <div class="box">Community Acquired Pneumonia</div>
  </div>

  <div class="section"><h3>Reason for Admission / Chief Complaint</h3>
    <p style="font-size:13px;white-space:pre-wrap;">Fever and cough for 3 days</p>
  </div>

  

  <div class="section"><h3>Treatment Given</h3>
    <table><thead><tr><th>Medicine</th><th>Dosage</th><th>Frequency</th><th>Route</th><th>Period</th></tr></thead><tbody>
    <tr>
      <td>Ceftriaxone</td>
      <td>1 g</td>
      <td>BD</td>
      <td>IV</td>
      <td>— → —</td>
    </tr>
    <tr>
      <td>Salbutamol</td>
      <td>2.5 mg</td>
      <td>QID</td>
      <td>Nebulisation</td>
      <td>— → —</td>
    </tr></tbody></table>
  </div>

  <div class="section"><h3>Treatment Notes</h3><p style="font-size:13px;white-space:pre-wrap;">IV Ceftriaxone 1g BD, Nebulisation QID</p></div>

  <div class="section"><h3>Course in Hospital</h3>
    <p style="font-size:13px;white-space:pre-wrap;">Patient responded to antibiotics. Afebrile by Day 3.</p>
  </div>

  <div class="section"><h3>Condition at Discharge</h3>
    <div class="box" style="background:#ecfdf5;border-left-color:#059669;">Stable, ready for discharge</div>
  </div>

  <div class="section"><h3>Discharge Medications</h3><div style="font-size:13px;white-space:pre-wrap;background:#fefce8;border-left:4px solid #ca8a04;padding:10px 14px;border-radius:0 6px 6px 0;">Tab Augmentin 625mg BD x 5d
Tab Paracetamol 500mg SOS</div></div>

  <div class="section"><h3>Follow-up Instructions</h3><p style="font-size:13px;white-space:pre-wrap;">OPD review in 1 week. Chest X-ray on follow-up.</p></div>

  <div class="signblock">
    <div class="sig">
      <div class="signline"></div>
      <p style="font-weight:600;font-size:13px;">Dr. Sunita Rao</p>
      <p style="font-size:11px;color:#64748b;">Attending Physician</p>
    </div>
  </div>

  <div class="footer">Discharge summary generated by MedCore Hospital</div>
  
<div class="no-print" style="text-align:center;margin-top:24px;">
  <button onclick="window.print()" style="background:#2563eb;color:#fff;border:none;padding:10px 24px;border-radius:6px;cursor:pointer;font-size:14px;">Print / Save as PDF</button>
</div>
</div><script>window.addEventListener('load',function(){setTimeout(function(){window.print();},400);});</script>
</body></html>"
`;

exports[`generateDischargeSummaryHTML — HTML snapshot > snapshot: minimal discharge summary 1`] = `
"<!DOCTYPE html>
<html lang="en"><head><meta charset="UTF-8" /><meta name="viewport" content="width=device-width, initial-scale=1.0" />
<title>Discharge Summary - Priya Snapshot</title>
<style>
  * { margin: 0; padding: 0; box-sizing: border-box; }
  body { font-family: 'Segoe UI', Tahoma, Verdana, sans-serif; color: #1e293b; background: #fff; }
  .page { max-width: 820px; margin: 0 auto; padding: 36px; }
  table { width:100%; border-collapse: collapse; }
  th { background:#f8fafc; text-align:left; padding:8px 10px; font-size:11px; text-transform:uppercase; color:#64748b; border-bottom:2px solid #e2e8f0; }
  td { padding:7px 10px; border-bottom:1px solid #e5e7eb; font-size:13px; vertical-align:top; }
  h2.title { text-align:center; font-size:16px; text-transform:uppercase; letter-spacing:2px; color:#475569; margin-bottom:18px; }
  .section { margin-bottom:18px; }
  .section h3 { font-size:12px; color:#94a3b8; text-transform:uppercase; letter-spacing:1px; margin-bottom:6px; }
  .box { background:#f1f5f9; border-left:4px solid #2563eb; padding:10px 14px; border-radius:0 6px 6px 0; font-size:13px; }
  .signblock { display:flex; justify-content:flex-end; margin-top:36px; }
  .signblock .sig { text-align:center; }
  .signline { height:50px; width:200px; border-bottom:1px solid #333; margin-bottom:4px; }
  .footer { margin-top:30px; padding-top:10px; border-top:1px solid #e2e8f0; text-align:center; font-size:10px; color:#94a3b8; }
  @media print {
    .page { padding:18px; max-width:100%; }
    .no-print { display:none !important; }
  }
  </style>
</head><body><div class="page">
  
  <div style="text-align:center;border-bottom:3px double #2563eb;padding-bottom:14px;margin-bottom:18px;">
    <h1 style="font-size:24px;color:#2563eb;margin:0 0 4px;">MedCore Hospital</h1>
    <p style="font-size:12px;color:#64748b;margin:2px 0;">1 Main St, Bengaluru 560001</p>
    <p style="font-size:11px;color:#64748b;margin:2px 0;">
      Phone: +91 80 1234 5678
       &nbsp;|&nbsp; Email: info@medcore.hospital
    </p>
    <p style="font-size:11px;color:#94a3b8;margin:2px 0;">
      GSTIN: 07AAAAA0000A1Z5
       &nbsp;|&nbsp; Reg. No: REG-KA-2024-001
    </p>
  </div>
  <h2 class="title">Discharge Summary</h2>

  <div style="display:flex;gap:20px;margin-bottom:18px;">
    <div style="flex:1;font-size:13px;">
      <p><strong>Patient:</strong> Priya Snapshot</p>
      <p><strong>MR No.:</strong> MR-SNAP-001</p>
      <p><strong>Age / Gender:</strong> 35 / FEMALE</p>
      <p><strong>Address:</strong> 42 Fixture Lane, Bengaluru</p>
      <p><strong>Phone:</strong> +91 98 0000 0001</p>
    </div>
    <div style="flex:1;font-size:13px;">
      <p><strong>Admission #:</strong> ADM-SNAP-001</p>
      <p><strong>Admitted:</strong> —</p>
      <p><strong>Discharged:</strong> —</p>
      <p><strong>Ward / Bed:</strong> General Ward 4 / W4-B02</p>
      <p><strong>Attending Doctor:</strong> Dr. Sunita Rao</p>
    </div>
  </div>

  <div class="section"><h3>Final Diagnosis</h3>
    <div class="box">Community Acquired Pneumonia</div>
  </div>

  <div class="section"><h3>Reason for Admission / Chief Complaint</h3>
    <p style="font-size:13px;white-space:pre-wrap;">Fever and cough for 3 days</p>
  </div>

  

  

  

  <div class="section"><h3>Course in Hospital</h3>
    <p style="font-size:13px;white-space:pre-wrap;">Patient responded to antibiotics. Afebrile by Day 3.</p>
  </div>

  <div class="section"><h3>Condition at Discharge</h3>
    <div class="box" style="background:#ecfdf5;border-left-color:#059669;">Stable, ready for discharge</div>
  </div>

  

  

  <div class="signblock">
    <div class="sig">
      <div class="signline"></div>
      <p style="font-weight:600;font-size:13px;">Dr. Sunita Rao</p>
      <p style="font-size:11px;color:#64748b;">Attending Physician</p>
    </div>
  </div>

  <div class="footer">Discharge summary generated by MedCore Hospital</div>
  
<div class="no-print" style="text-align:center;margin-top:24px;">
  <button onclick="window.print()" style="background:#2563eb;color:#fff;border:none;padding:10px 24px;border-radius:6px;cursor:pointer;font-size:14px;">Print / Save as PDF</button>
</div>
</div><script>window.addEventListener('load',function(){setTimeout(function(){window.print();},400);});</script>
</body></html>"
`;

exports[`generateInvoicePDF — HTML snapshot > snapshot: minimal single-item invoice 1`] = `
"<!DOCTYPE html>
<html lang="en"><head><meta charset="UTF-8" /><meta name="viewport" content="width=device-width, initial-scale=1.0" />
<title>Invoice INV-SNAP-0001</title>
<style>
  * { margin: 0; padding: 0; box-sizing: border-box; }
  body { font-family: 'Segoe UI', Tahoma, Verdana, sans-serif; color: #1e293b; background: #fff; }
  .page { max-width: 820px; margin: 0 auto; padding: 36px; }
  table { width:100%; border-collapse: collapse; }
  th { background:#f8fafc; text-align:left; padding:8px 10px; font-size:11px; text-transform:uppercase; color:#64748b; border-bottom:2px solid #e2e8f0; }
  td { padding:7px 10px; border-bottom:1px solid #e5e7eb; font-size:13px; vertical-align:top; }
  h2.title { text-align:center; font-size:16px; text-transform:uppercase; letter-spacing:2px; color:#475569; margin-bottom:18px; }
  .section { margin-bottom:18px; }
  .section h3 { font-size:12px; color:#94a3b8; text-transform:uppercase; letter-spacing:1px; margin-bottom:6px; }
  .box { background:#f1f5f9; border-left:4px solid #2563eb; padding:10px 14px; border-radius:0 6px 6px 0; font-size:13px; }
  .signblock { display:flex; justify-content:flex-end; margin-top:36px; }
  .signblock .sig { text-align:center; }
  .signline { height:50px; width:200px; border-bottom:1px solid #333; margin-bottom:4px; }
  .footer { margin-top:30px; padding-top:10px; border-top:1px solid #e2e8f0; text-align:center; font-size:10px; color:#94a3b8; }
  @media print {
    .page { padding:18px; max-width:100%; }
    .no-print { display:none !important; }
  }
  </style>
</head><body><div class="page">
  
  <div style="text-align:center;border-bottom:3px double #2563eb;padding-bottom:14px;margin-bottom:18px;">
    <h1 style="font-size:24px;color:#2563eb;margin:0 0 4px;">MedCore Hospital</h1>
    <p style="font-size:12px;color:#64748b;margin:2px 0;">1 Main St, Bengaluru 560001</p>
    <p style="font-size:11px;color:#64748b;margin:2px 0;">
      Phone: +91 80 1234 5678
       &nbsp;|&nbsp; Email: info@medcore.hospital
    </p>
    <p style="font-size:11px;color:#94a3b8;margin:2px 0;">
      GSTIN: 07AAAAA0000A1Z5
       &nbsp;|&nbsp; Reg. No: REG-KA-2024-001
    </p>
  </div>
  <h2 class="title">Tax Invoice</h2>

  <div style="display:flex;gap:20px;margin-bottom:16px;font-size:13px;">
    <div style="flex:1;">
      <h3 style="font-size:11px;color:#94a3b8;text-transform:uppercase;margin-bottom:4px;">Bill To</h3>
      <p style="font-weight:600;">Priya Snapshot</p>
      <p>MR: MR-SNAP-001</p>
      <p>42 Fixture Lane, Bengaluru</p>
      <p>Phone: +91 98 0000 0001</p>
    </div>
    <div style="flex:1;text-align:right;">
      <p><strong>Invoice #:</strong> INV-SNAP-0001</p>
      <p><strong>Date:</strong> —</p>
      
      <p><strong>Status:</strong> PENDING</p>
    </div>
  </div>

  <table style="margin-bottom:14px;font-size:11px;">
    <thead><tr>
      <th style="text-align:center;">#</th>
      <th>Description</th>
      <th style="text-align:center;">HSN/SAC</th>
      <th style="text-align:center;">Qty</th>
      <th style="text-align:right;">Rate</th>
      <th style="text-align:right;">Taxable</th>
      <th style="text-align:right;">CGST</th>
      <th style="text-align:right;">SGST</th>
      <th style="text-align:right;">Total</th>
    </tr></thead>
    <tbody>
    <tr>
      <td style="text-align:center;">1</td>
      <td>General Consultation<br/><span style="font-size:10px;color:#94a3b8;">OPD · GST 18%</span></td>
      <td style="text-align:center;font-family:monospace;">9993</td>
      <td style="text-align:center;">1</td>
      <td style="text-align:right;">1000.00</td>
      <td style="text-align:right;">1000.00</td>
      <td style="text-align:right;">90.00</td>
      <td style="text-align:right;">90.00</td>
      <td style="text-align:right;font-weight:600;">1180.00</td>
    </tr></tbody>
  </table>

  <div style="display:flex;justify-content:flex-end;margin-bottom:14px;">
    <table style="width:340px;font-size:13px;">
      <tr><td>Subtotal</td><td style="text-align:right;">₹1000.00</td></tr>
      
      
      <tr><td>Taxable Amount</td><td style="text-align:right;">₹1000.00</td></tr>
      <tr><td>CGST</td><td style="text-align:right;">₹90.00</td></tr>
      <tr><td>SGST</td><td style="text-align:right;">₹90.00</td></tr>
      
      <tr style="background:#f1f5f9;font-weight:700;font-size:14px;">
        <td>Total</td><td style="text-align:right;">₹1180.00</td>
      </tr>
      
      
      <tr style="font-weight:700;color:#dc2626;">
        <td>Balance</td><td style="text-align:right;">₹1180.00</td>
      </tr>
    </table>
  </div>

  <div class="box" style="margin-bottom:14px;font-size:12px;">
    <strong>Amount in Words:</strong> One Thousand One Hundred Eighty Rupees Only
  </div>

  

  <div class="footer" style="text-align:left;">
    <p style="font-weight:600;color:#475569;margin-bottom:4px;">Terms &amp; Conditions:</p>
    <p>1. This is a computer-generated invoice and does not require physical signature.</p>
    <p>2. Payments are non-refundable except as per hospital policy.</p>
    <p>3. Subject to local jurisdiction.</p>
  </div>

  <div class="signblock">
    <div class="sig">
      <div class="signline"></div>
      <p style="font-size:12px;font-weight:600;">Authorised Signatory</p>
      <p style="font-size:10px;color:#64748b;">For MedCore Hospital</p>
    </div>
  </div>
  
<div class="no-print" style="text-align:center;margin-top:24px;">
  <button onclick="window.print()" style="background:#2563eb;color:#fff;border:none;padding:10px 24px;border-radius:6px;cursor:pointer;font-size:14px;">Print / Save as PDF</button>
</div>
</div><script>window.addEventListener('load',function(){setTimeout(function(){window.print();},400);});</script>
</body></html>"
`;

exports[`generateInvoicePDF — HTML snapshot > snapshot: multi-item invoice with discount and partial payment 1`] = `
"<!DOCTYPE html>
<html lang="en"><head><meta charset="UTF-8" /><meta name="viewport" content="width=device-width, initial-scale=1.0" />
<title>Invoice INV-SNAP-0002</title>
<style>
  * { margin: 0; padding: 0; box-sizing: border-box; }
  body { font-family: 'Segoe UI', Tahoma, Verdana, sans-serif; color: #1e293b; background: #fff; }
  .page { max-width: 820px; margin: 0 auto; padding: 36px; }
  table { width:100%; border-collapse: collapse; }
  th { background:#f8fafc; text-align:left; padding:8px 10px; font-size:11px; text-transform:uppercase; color:#64748b; border-bottom:2px solid #e2e8f0; }
  td { padding:7px 10px; border-bottom:1px solid #e5e7eb; font-size:13px; vertical-align:top; }
  h2.title { text-align:center; font-size:16px; text-transform:uppercase; letter-spacing:2px; color:#475569; margin-bottom:18px; }
  .section { margin-bottom:18px; }
  .section h3 { font-size:12px; color:#94a3b8; text-transform:uppercase; letter-spacing:1px; margin-bottom:6px; }
  .box { background:#f1f5f9; border-left:4px solid #2563eb; padding:10px 14px; border-radius:0 6px 6px 0; font-size:13px; }
  .signblock { display:flex; justify-content:flex-end; margin-top:36px; }
  .signblock .sig { text-align:center; }
  .signline { height:50px; width:200px; border-bottom:1px solid #333; margin-bottom:4px; }
  .footer { margin-top:30px; padding-top:10px; border-top:1px solid #e2e8f0; text-align:center; font-size:10px; color:#94a3b8; }
  @media print {
    .page { padding:18px; max-width:100%; }
    .no-print { display:none !important; }
  }
  </style>
</head><body><div class="page">
  
  <div style="text-align:center;border-bottom:3px double #2563eb;padding-bottom:14px;margin-bottom:18px;">
    <h1 style="font-size:24px;color:#2563eb;margin:0 0 4px;">MedCore Hospital</h1>
    <p style="font-size:12px;color:#64748b;margin:2px 0;">1 Main St, Bengaluru 560001</p>
    <p style="font-size:11px;color:#64748b;margin:2px 0;">
      Phone: +91 80 1234 5678
       &nbsp;|&nbsp; Email: info@medcore.hospital
    </p>
    <p style="font-size:11px;color:#94a3b8;margin:2px 0;">
      GSTIN: 07AAAAA0000A1Z5
       &nbsp;|&nbsp; Reg. No: REG-KA-2024-001
    </p>
  </div>
  <h2 class="title">Tax Invoice</h2>

  <div style="display:flex;gap:20px;margin-bottom:16px;font-size:13px;">
    <div style="flex:1;">
      <h3 style="font-size:11px;color:#94a3b8;text-transform:uppercase;margin-bottom:4px;">Bill To</h3>
      <p style="font-weight:600;">Priya Snapshot</p>
      <p>MR: MR-SNAP-001</p>
      <p>42 Fixture Lane, Bengaluru</p>
      <p>Phone: +91 98 0000 0001</p>
    </div>
    <div style="flex:1;text-align:right;">
      <p><strong>Invoice #:</strong> INV-SNAP-0002</p>
      <p><strong>Date:</strong> —</p>
      
      <p><strong>Status:</strong> PARTIAL</p>
    </div>
  </div>

  <table style="margin-bottom:14px;font-size:11px;">
    <thead><tr>
      <th style="text-align:center;">#</th>
      <th>Description</th>
      <th style="text-align:center;">HSN/SAC</th>
      <th style="text-align:center;">Qty</th>
      <th style="text-align:right;">Rate</th>
      <th style="text-align:right;">Taxable</th>
      <th style="text-align:right;">CGST</th>
      <th style="text-align:right;">SGST</th>
      <th style="text-align:right;">Total</th>
    </tr></thead>
    <tbody>
    <tr>
      <td style="text-align:center;">1</td>
      <td>General Consultation<br/><span style="font-size:10px;color:#94a3b8;">OPD · GST 18%</span></td>
      <td style="text-align:center;font-family:monospace;">9993</td>
      <td style="text-align:center;">1</td>
      <td style="text-align:right;">1000.00</td>
      <td style="text-align:right;">1000.00</td>
      <td style="text-align:right;">90.00</td>
      <td style="text-align:right;">90.00</td>
      <td style="text-align:right;font-weight:600;">1180.00</td>
    </tr>
    <tr>
      <td style="text-align:center;">2</td>
      <td>Complete Blood Count<br/><span style="font-size:10px;color:#94a3b8;">LAB · GST 12%</span></td>
      <td style="text-align:center;font-family:monospace;">9993</td>
      <td style="text-align:center;">1</td>
      <td style="text-align:right;">1000.00</td>
      <td style="text-align:right;">1000.00</td>
      <td style="text-align:right;">60.00</td>
      <td style="text-align:right;">60.00</td>
      <td style="text-align:right;font-weight:600;">1120.00</td>
    </tr></tbody>
  </table>

  <div style="display:flex;justify-content:flex-end;margin-bottom:14px;">
    <table style="width:340px;font-size:13px;">
      <tr><td>Subtotal</td><td style="text-align:right;">₹2000.00</td></tr>
      
      <tr><td>Discount</td><td style="text-align:right;">-₹200.00</td></tr>
      <tr><td>Taxable Amount</td><td style="text-align:right;">₹1800.00</td></tr>
      <tr><td>CGST</td><td style="text-align:right;">₹150.00</td></tr>
      <tr><td>SGST</td><td style="text-align:right;">₹150.00</td></tr>
      
      <tr style="background:#f1f5f9;font-weight:700;font-size:14px;">
        <td>Total</td><td style="text-align:right;">₹2100.00</td>
      </tr>
      
      <tr><td>Paid</td><td style="text-align:right;">-₹1000.00</td></tr>
      <tr style="font-weight:700;color:#dc2626;">
        <td>Balance</td><td style="text-align:right;">₹1100.00</td>
      </tr>
    </table>
  </div>

  <div class="box" style="margin-bottom:14px;font-size:12px;">
    <strong>Amount in Words:</strong> Two Thousand One Hundred Rupees Only
  </div>

  <div class="section"><h3>Payment History</h3>
    <table><thead><tr><th>Date</th><th>Mode</th><th>Reference</th><th style="text-align:right;">Amount</th></tr></thead><tbody>
    <tr>
      <td>—</td>
      <td>UPI</td>
      <td>SNAP-TXN-001</td>
      <td style="text-align:right;">₹1000.00</td>
    </tr></tbody></table>
  </div>

  <div class="footer" style="text-align:left;">
    <p style="font-weight:600;color:#475569;margin-bottom:4px;">Terms &amp; Conditions:</p>
    <p>1. This is a computer-generated invoice and does not require physical signature.</p>
    <p>2. Payments are non-refundable except as per hospital policy.</p>
    <p>3. Subject to local jurisdiction.</p>
  </div>

  <div class="signblock">
    <div class="sig">
      <div class="signline"></div>
      <p style="font-size:12px;font-weight:600;">Authorised Signatory</p>
      <p style="font-size:10px;color:#64748b;">For MedCore Hospital</p>
    </div>
  </div>
  
<div class="no-print" style="text-align:center;margin-top:24px;">
  <button onclick="window.print()" style="background:#2563eb;color:#fff;border:none;padding:10px 24px;border-radius:6px;cursor:pointer;font-size:14px;">Print / Save as PDF</button>
</div>
</div><script>window.addEventListener('load',function(){setTimeout(function(){window.print();},400);});</script>
</body></html>"
`;

exports[`generatePrescriptionPDF — HTML snapshot > snapshot: empty / default prescription 1`] = `
"<!DOCTYPE html>
<html lang="en"><head><meta charset="UTF-8" /><meta name="viewport" content="width=device-width, initial-scale=1.0" />
<title>Prescription - Priya Snapshot</title>
<style>
  * { margin: 0; padding: 0; box-sizing: border-box; }
  body { font-family: 'Segoe UI', Tahoma, Verdana, sans-serif; color: #1e293b; background: #fff; }
  .page { max-width: 820px; margin: 0 auto; padding: 36px; }
  table { width:100%; border-collapse: collapse; }
  th { background:#f8fafc; text-align:left; padding:8px 10px; font-size:11px; text-transform:uppercase; color:#64748b; border-bottom:2px solid #e2e8f0; }
  td { padding:7px 10px; border-bottom:1px solid #e5e7eb; font-size:13px; vertical-align:top; }
  h2.title { text-align:center; font-size:16px; text-transform:uppercase; letter-spacing:2px; color:#475569; margin-bottom:18px; }
  .section { margin-bottom:18px; }
  .section h3 { font-size:12px; color:#94a3b8; text-transform:uppercase; letter-spacing:1px; margin-bottom:6px; }
  .box { background:#f1f5f9; border-left:4px solid #2563eb; padding:10px 14px; border-radius:0 6px 6px 0; font-size:13px; }
  .signblock { display:flex; justify-content:flex-end; margin-top:36px; }
  .signblock .sig { text-align:center; }
  .signline { height:50px; width:200px; border-bottom:1px solid #333; margin-bottom:4px; }
  .footer { margin-top:30px; padding-top:10px; border-top:1px solid #e2e8f0; text-align:center; font-size:10px; color:#94a3b8; }
  @media print {
    .page { padding:18px; max-width:100%; }
    .no-print { display:none !important; }
  }
  </style>
</head><body><div class="page">
  
  <div style="text-align:center;border-bottom:3px double #2563eb;padding-bottom:14px;margin-bottom:18px;">
    <h1 style="font-size:24px;color:#2563eb;margin:0 0 4px;">MedCore Hospital</h1>
    <p style="font-size:12px;color:#64748b;margin:2px 0;">1 Main St, Bengaluru 560001</p>
    <p style="font-size:11px;color:#64748b;margin:2px 0;">
      Phone: +91 80 1234 5678
       &nbsp;|&nbsp; Email: info@medcore.hospital
    </p>
    <p style="font-size:11px;color:#94a3b8;margin:2px 0;">
      GSTIN: 07AAAAA0000A1Z5
       &nbsp;|&nbsp; Reg. No: REG-KA-2024-001
    </p>
  </div>
  <h2 class="title">Prescription</h2>

  <div style="display:flex;justify-content:space-between;margin-bottom:18px;gap:20px;">
    <div style="flex:1;">
      <h3 style="font-size:11px;color:#94a3b8;text-transform:uppercase;margin-bottom:6px;">Patient Details</h3>
      <table style="font-size:13px;border:none;">
        <tr><td style="border:none;padding:2px 12px 2px 0;color:#64748b;">Name</td><td style="border:none;font-weight:600;">Priya Snapshot</td></tr>
        <tr><td style="border:none;padding:2px 12px 2px 0;color:#64748b;">MR No.</td><td style="border:none;">MR-SNAP-001</td></tr>
        <tr><td style="border:none;padding:2px 12px 2px 0;color:#64748b;">Age</td><td style="border:none;">35 yrs</td></tr>
        <tr><td style="border:none;padding:2px 12px 2px 0;color:#64748b;">Gender</td><td style="border:none;">FEMALE</td></tr>
      </table>
    </div>
    <div style="flex:1;text-align:right;">
      <h3 style="font-size:11px;color:#94a3b8;text-transform:uppercase;margin-bottom:6px;">Doctor</h3>
      <p style="font-weight:600;">Dr. Dr Snapshot</p>
      <p style="font-size:12px;color:#64748b;">MBBS</p>
      
      <p style="font-size:12px;color:#64748b;margin-top:4px;">Date: —</p>
    </div>
  </div>

  <div class="box" style="margin-bottom:16px;">
    <span style="font-size:11px;color:#64748b;text-transform:uppercase;">Diagnosis</span>
    <p style="font-size:14px;font-weight:500;margin-top:3px;">Observation</p>
  </div>

  <table style="margin-bottom:18px;">
    <thead><tr>
      <th style="text-align:center;">#</th><th>Medicine</th><th>Dosage</th><th>Frequency</th><th>Duration</th><th>Instructions</th>
    </tr></thead>
    <tbody></tbody>
  </table>

  

  

  <div class="signblock">
    <div class="sig">
      <div class="signline"></div>
      <p style="font-weight:600;font-size:13px;">Dr. Dr Snapshot</p>
      <p style="font-size:11px;color:#64748b;">MBBS</p>
    </div>
  </div>

  
  <div style="display:flex;align-items:center;gap:14px;margin-top:24px;padding:12px;border:1px dashed #cbd5e1;border-radius:6px;">
    <img src="data:image/png;base64,STUB_QR" alt="Verification QR" style="width:120px;height:120px;border:1px solid #e5e7eb;border-radius:4px;" />
    <div style="font-size:11px;color:#475569;">
      <p style="font-weight:600;margin-bottom:2px;">Authenticity Verification</p>
      <p>Scan this QR or visit:</p>
      <p style="font-family:monospace;color:#2563eb;word-break:break-all;">https://medcore.globusdemos.com/verify/rx/rx-snap-empty</p>
      <p style="margin-top:3px;color:#94a3b8;">Rx ID: rx-snap-empty</p>
    </div>
  </div>

  <div class="footer">Digitally generated prescription — MedCore Hospital</div>
  
<div class="no-print" style="text-align:center;margin-top:24px;">
  <button onclick="window.print()" style="background:#2563eb;color:#fff;border:none;padding:10px 24px;border-radius:6px;cursor:pointer;font-size:14px;">Print / Save as PDF</button>
</div>
</div>
</body></html>"
`;

exports[`generatePrescriptionPDF — HTML snapshot > snapshot: populated prescription with two medications 1`] = `
"<!DOCTYPE html>
<html lang="en"><head><meta charset="UTF-8" /><meta name="viewport" content="width=device-width, initial-scale=1.0" />
<title>Prescription - Priya Snapshot</title>
<style>
  * { margin: 0; padding: 0; box-sizing: border-box; }
  body { font-family: 'Segoe UI', Tahoma, Verdana, sans-serif; color: #1e293b; background: #fff; }
  .page { max-width: 820px; margin: 0 auto; padding: 36px; }
  table { width:100%; border-collapse: collapse; }
  th { background:#f8fafc; text-align:left; padding:8px 10px; font-size:11px; text-transform:uppercase; color:#64748b; border-bottom:2px solid #e2e8f0; }
  td { padding:7px 10px; border-bottom:1px solid #e5e7eb; font-size:13px; vertical-align:top; }
  h2.title { text-align:center; font-size:16px; text-transform:uppercase; letter-spacing:2px; color:#475569; margin-bottom:18px; }
  .section { margin-bottom:18px; }
  .section h3 { font-size:12px; color:#94a3b8; text-transform:uppercase; letter-spacing:1px; margin-bottom:6px; }
  .box { background:#f1f5f9; border-left:4px solid #2563eb; padding:10px 14px; border-radius:0 6px 6px 0; font-size:13px; }
  .signblock { display:flex; justify-content:flex-end; margin-top:36px; }
  .signblock .sig { text-align:center; }
  .signline { height:50px; width:200px; border-bottom:1px solid #333; margin-bottom:4px; }
  .footer { margin-top:30px; padding-top:10px; border-top:1px solid #e2e8f0; text-align:center; font-size:10px; color:#94a3b8; }
  @media print {
    .page { padding:18px; max-width:100%; }
    .no-print { display:none !important; }
  }
  </style>
</head><body><div class="page">
  
  <div style="text-align:center;border-bottom:3px double #2563eb;padding-bottom:14px;margin-bottom:18px;">
    <h1 style="font-size:24px;color:#2563eb;margin:0 0 4px;">MedCore Hospital</h1>
    <p style="font-size:12px;color:#64748b;margin:2px 0;">1 Main St, Bengaluru 560001</p>
    <p style="font-size:11px;color:#64748b;margin:2px 0;">
      Phone: +91 80 1234 5678
       &nbsp;|&nbsp; Email: info@medcore.hospital
    </p>
    <p style="font-size:11px;color:#94a3b8;margin:2px 0;">
      GSTIN: 07AAAAA0000A1Z5
       &nbsp;|&nbsp; Reg. No: REG-KA-2024-001
    </p>
  </div>
  <h2 class="title">Prescription</h2>

  <div style="display:flex;justify-content:space-between;margin-bottom:18px;gap:20px;">
    <div style="flex:1;">
      <h3 style="font-size:11px;color:#94a3b8;text-transform:uppercase;margin-bottom:6px;">Patient Details</h3>
      <table style="font-size:13px;border:none;">
        <tr><td style="border:none;padding:2px 12px 2px 0;color:#64748b;">Name</td><td style="border:none;font-weight:600;">Priya Snapshot</td></tr>
        <tr><td style="border:none;padding:2px 12px 2px 0;color:#64748b;">MR No.</td><td style="border:none;">MR-SNAP-001</td></tr>
        <tr><td style="border:none;padding:2px 12px 2px 0;color:#64748b;">Age</td><td style="border:none;">35 yrs</td></tr>
        <tr><td style="border:none;padding:2px 12px 2px 0;color:#64748b;">Gender</td><td style="border:none;">FEMALE</td></tr>
      </table>
    </div>
    <div style="flex:1;text-align:right;">
      <h3 style="font-size:11px;color:#94a3b8;text-transform:uppercase;margin-bottom:6px;">Doctor</h3>
      <p style="font-weight:600;">Dr. Ramesh Kumar</p>
      <p style="font-size:12px;color:#64748b;">MBBS, MD (Internal Medicine)</p>
      <p style="font-size:12px;color:#64748b;">General Medicine</p>
      <p style="font-size:12px;color:#64748b;margin-top:4px;">Date: —</p>
    </div>
  </div>

  <div class="box" style="margin-bottom:16px;">
    <span style="font-size:11px;color:#64748b;text-transform:uppercase;">Diagnosis</span>
    <p style="font-size:14px;font-weight:500;margin-top:3px;">Acute Viral Pharyngitis with secondary rhinitis</p>
  </div>

  <table style="margin-bottom:18px;">
    <thead><tr>
      <th style="text-align:center;">#</th><th>Medicine</th><th>Dosage</th><th>Frequency</th><th>Duration</th><th>Instructions</th>
    </tr></thead>
    <tbody>
      <tr>
        <td style="text-align:center;">1</td>
        <td style="font-weight:500;">Amoxicillin</td>
        <td>500 mg</td>
        <td>TDS</td>
        <td>7 days</td>
        <td>After meals</td>
      </tr>

      <tr>
        <td style="text-align:center;">2</td>
        <td style="font-weight:500;">Cetirizine</td>
        <td>10 mg</td>
        <td>OD at night</td>
        <td>5 days</td>
        <td>-</td>
      </tr></tbody>
  </table>

  <div class="section"><h3>Advice</h3><p style="font-size:13px;line-height:1.5;white-space:pre-wrap;">Rest for 3 days. Avoid cold drinks. Increase fluid intake.</p></div>

  

  <div class="signblock">
    <div class="sig">
      <div class="signline"></div>
      <p style="font-weight:600;font-size:13px;">Dr. Ramesh Kumar</p>
      <p style="font-size:11px;color:#64748b;">MBBS, MD (Internal Medicine)</p>
    </div>
  </div>

  
  <div style="display:flex;align-items:center;gap:14px;margin-top:24px;padding:12px;border:1px dashed #cbd5e1;border-radius:6px;">
    <img src="data:image/png;base64,STUB_QR" alt="Verification QR" style="width:120px;height:120px;border:1px solid #e5e7eb;border-radius:4px;" />
    <div style="font-size:11px;color:#475569;">
      <p style="font-weight:600;margin-bottom:2px;">Authenticity Verification</p>
      <p>Scan this QR or visit:</p>
      <p style="font-family:monospace;color:#2563eb;word-break:break-all;">https://medcore.globusdemos.com/verify/rx/rx-snap-full</p>
      <p style="margin-top:3px;color:#94a3b8;">Rx ID: rx-snap-full</p>
    </div>
  </div>

  <div class="footer">Digitally generated prescription — MedCore Hospital</div>
  
<div class="no-print" style="text-align:center;margin-top:24px;">
  <button onclick="window.print()" style="background:#2563eb;color:#fff;border:none;padding:10px 24px;border-radius:6px;cursor:pointer;font-size:14px;">Print / Save as PDF</button>
</div>
</div>
</body></html>"
`;

exports[`generateReferralLetter — prompt template snapshot > snapshot: referral letter prompt — EMERGENCY urgency, no toDoctorName, empty medications 1`] = `
"Generate a referral letter with the following information:

DATE: 2024-06-15
FROM: Dr. Suresh Iyer, MedCore Hospital
TO: Neurology Specialist
PATIENT: Meera Snapshot
CLINICAL SUMMARY: Sudden onset right-sided weakness and aphasia.
RELEVANT HISTORY: No prior neurological history.
CURRENT MEDICATIONS:
  - None
URGENCY: EMERGENCY

Structure the letter with these sections:
1. Date
2. From (doctor/hospital)
3. To (specialty/doctor)
4. Re: Patient
5. Clinical Summary
6. Reason for Referral
7. Current Medications
8. Urgency
9. Request

Write a formal referral letter using the above data."
`;

exports[`generateReferralLetter — prompt template snapshot > snapshot: referral letter prompt — ROUTINE urgency with toDoctorName 1`] = `
"Generate a referral letter with the following information:

DATE: 2024-06-01
FROM: Dr. Anita Sharma, MedCore Hospital
TO: Dr. Rajesh Patel / Cardiology
PATIENT: Vikram Snapshot, Age 45, Male
CLINICAL SUMMARY: Chest pain on exertion for 2 weeks. Resting ECG shows ST changes.
RELEVANT HISTORY: Hypertension on Amlodipine. Diabetic on Metformin.
CURRENT MEDICATIONS:
  - Amlodipine 5mg OD
  - Metformin 500mg BD
URGENCY: ROUTINE

Structure the letter with these sections:
1. Date
2. From (doctor/hospital)
3. To (specialty/doctor)
4. Re: Patient
5. Clinical Summary
6. Reason for Referral
7. Current Medications
8. Urgency
9. Request

Write a formal referral letter using the above data."
`;
